--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,12 @@
-[package]
-name = "figurust"
-version = "0.1.0"
+[workspace]
+members = ["figlet-compat", "figurust", "figurust-bin"]
+
+[workspace.package]
+version = "0.2.0"
 edition = "2021"
+authors = ["Campbell Cole <cmcoleco@gmail.com>"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[build-dependencies]
-chrono = "0.4.23"
-
-[dependencies]
-clap = { version = "4.1.4", features = ["derive"] }
-dirs = "4.0.0"
+[workspace.dependencies]
+thiserror = "1.0.38"
 env_logger = "0.10.0"
 log = "0.4.17"
-termsize = "0.1.6"
-thiserror = "1.0.38"
