--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ authors = ["Campbell Cole <cmcoleco@gmail.com>"]
 thiserror = "1.0.38"
 env_logger = "0.10.0"
 log = "0.4.17"
+clap = { version = "4.1.4", features = ["derive"] }
