--- a/figlet-compat/Cargo.toml
+++ b/figlet-compat/Cargo.toml
@@ -10,10 +10,10 @@ edition.workspace = true
 chrono = "0.4.23"
 
 [dependencies]
-clap = { version = "4.1.4", features = ["derive"] }
 dirs = "4.0.0"
 termsize = "0.1.6"
 
+clap.workspace = true
 log.workspace = true
 env_logger.workspace = true
 thiserror.workspace = true
