--- a/figurust-bin/Cargo.toml
+++ b/figurust-bin/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "figurust-bin"
-version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+version.workspace = true
+edition.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap.workspace = true
+log.workspace = true
+env_logger.workspace = true
