--- a/figlet-compat/Cargo.toml
+++ b/figlet-compat/Cargo.toml
@@ -17,5 +17,6 @@ clap.workspace = true
 log.workspace = true
 env_logger.workspace = true
 thiserror.workspace = true
+owo-colors.workspace = true
 
 figurust = { path = "../figurust" }
